# Pistology-TOS

./: DEPLOYMENT.md  README.md  docker-compose.yml  env.example
backend/: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  package-lock.json  package.json  schema.sql
backend/prisma/: schema.prisma
backend/src/: index.ts  main.rs
backend/src/middleware/: cache.rs  cache.ts
backend/src/models/: appointment.rs  container.rs  customs.rs  damage.rs  edi.rs  history.rs  location.rs  mod.rs  task.rs
backend/src/routes/: appointments.rs  customs.rs  damage.rs  edi.rs  history.rs  location.rs  mod.rs  tasks.rs
backend/src/services/: mod.rs
backend/src/services/edi/: baplie_parser.rs  coarri_parser.rs  codeco_parser.rs  mod.rs
frontend/: .dockerignore  Dockerfile  nginx.conf  vite.config.ts
frontend/src/: App.tsx
