[package]
name = "pistology-backend"
version = "1.0.0"
edition = "2021"

[dependencies]
# Web Framework
actix-web = "4.9"
actix-cors = "0.7"

# Async Runtime
tokio = { version = "1.41", features = ["full"] }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite", "chrono"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Validation
validator = { version = "0.18", features = ["derive"] }

# Date/Time
chrono = { version = "0.4", features = ["serde"] }

# Caching
dashmap = "6.1"

# Environment
dotenv = "0.15"

# Error Handling
anyhow = "1.0"
thiserror = "2.0"

# Logging
env_logger = "0.11"
log = "0.4"

# Compression
actix-web-lab = "0.22"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
